--- a/todolist-dom/style.css
+++ b/todolist-dom/style.css
@@ -9,6 +9,10 @@ img {
     max-height: 100%;
 }
 
+svg {
+    fill: currentColor;
+}
+
 input {
     border: none;
     background-color: transparent;
@@ -83,6 +87,30 @@ button {
     border: 1px solid #000;
 }
 
+.list__item.done .list__title {
+    text-decoration: line-through;
+}
+
+.list__item.done .list__title {
+    text-decoration: line-through;
+}
+
+.list__done {
+    display: block;
+}
+
+.list__done-green {
+    display: none;
+}
+
+.list__item.done .list__done {
+    display: none;
+}
+
+.list__item.done .list__done-green {
+    display: block;
+}
+
 .list__title {
     flex: 1;
     font-size: 24px;
@@ -91,6 +119,8 @@ button {
 .list__done {
     cursor: pointer;
     flex: 0;
+
+    color: blue;
 }
 
 .list__delete {
