--- a/todolist-dom/style.css
+++ b/todolist-dom/style.css
@@ -9,10 +9,6 @@ img {
     max-height: 100%;
 }
 
-svg {
-    fill: currentColor;
-}
-
 input {
     border: none;
     background-color: transparent;
@@ -78,7 +74,7 @@ button {
     font-size: 15px;
 }
 
-.list__item {
+.template__list-item {
     padding: 0 10px;
     display: flex;
     align-items: center;
@@ -87,48 +83,28 @@ button {
     border: 1px solid #000;
 }
 
-.list__item.done .list__title {
+.template__list-item.done .list-item__done {
+    fill: green;
+}
+
+.template__list-item .list-item__done {
+    fill: black;
+}
+
+.template__list-item.done .list-item__title {
     text-decoration: line-through;
 }
 
-.list__item.done .list__title {
-    text-decoration: line-through;
-}
-
-.list__done {
-    display: block;
-}
-
-.list__done-green {
-    display: none;
-}
-
-.list__item.done .list__done {
-    display: none;
-}
-
-.list__item.done .list__done-green {
-    display: block;
-}
-
-.list__title {
-    flex: 1;
+.list-item__title {
     font-size: 24px;
 }
 
-.list__done {
+.list-item__done:hover {
     cursor: pointer;
-    flex: 0;
-
-    color: blue;
+    fill: green;
 }
 
-.list__delete {
-    flex: 0;
-    border: 1px solid #000;
+.list-item__delete:hover {
     cursor: pointer;
-}
-
-.line-through {
-    text-decoration: line-through;
+    stroke: red;
 }
