--- a/react/component-button/src/ui/ButtonSetting/ButtonSetting.module.css
+++ b/react/component-button/src/ui/ButtonSetting/ButtonSetting.module.css
@@ -1,6 +1,8 @@
 .container,
 .container_open {
     position: fixed;
+    top: 0;
+    left: 0;
     padding: 10px;
     cursor: pointer;
     transition: transform 0.3s;
