--- a/react/todoList/src/components/App/App.module.css
+++ b/react/todoList/src/components/App/App.module.css
@@ -1,3 +1,17 @@
+*::-webkit-scrollbar {
+    width: 8px;
+}
+
+*::-webkit-scrollbar-track {
+    background: #fff;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: #1a1a1a;
+    border-radius: 20px;
+    border: 1px solid #fff;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -22,7 +36,7 @@ h1 {
 
 button {
     border: 1px solid transparent;
-    padding: 0.6em 1.2em;
+    padding: 4px 8px;
     font-size: 1em;
     font-weight: 500;
     font-family: inherit;
@@ -51,25 +65,45 @@ li {
     text-align: start;
 }
 
-.todo-list {
+.img {
+    max-width: 300px;
+    max-height: 200px;
+    object-fit: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.descriptionContainer {
+    max-width: 300px;
+    text-align: center;
+    word-break: break-all;
+}
+
+.buttonContainer {
+    display: flex;
+    gap: 2px;
+}
+
+.todoList {
     margin: 50px auto;
 }
 
-.todo-list__wrapper {
+.todoListWrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 20px;
 }
 
-.wrapper__body {
+.wrapperBody {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 20px;
 }
 
-.body__todo {
+.bodyTodo {
     border-radius: 8px;
     background-color: #1a1a1a;
     cursor: pointer;
@@ -77,14 +111,30 @@ li {
     display: flex;
 }
 
-.body__list {
+.bodyList {
     width: 100%;
+    height: 100%;
 }
 
-.list__item {
+.itemContainer {
     display: flex;
+    gap: 8px;
+    width: 100%;
+    border: 1px solid #000;
+    padding: 5px;
+    border-radius: 8px;
+    background-color: #242424;
+}
+
+.listItem {
+    display: flex;
+    flex-direction: column;
     justify-content: space-between;
+    align-items: center;
     gap: 20px;
+    border: 1px solid #000;
+    padding: 15px;
+    border-radius: 8px;
 }
 
 .item {
@@ -99,10 +149,9 @@ li {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    padding: 0.6em 1.2em;
 }
 
-.todo__input {
+.todoInput {
     padding: 0.6em 1.2em;
     font-size: 1em;
     font-weight: 500;
@@ -110,10 +159,11 @@ li {
     color: #fff;
 }
 
-.done {
-    text-decoration: line-through;
+.listPlaceholder {
+    text-align: center;
 }
 
-.list__placeholder {
-    text-align: center;
+.description {
+    display: flex;
+    justify-content: center;
 }
